# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [3.1.0]
- Add remote authentication support via hco to enable centralized credentials management across HCLI services
- Fix unused returns in authenticator.py
- Fix empty output for hco logging
- Fix error when returning empty list of key via hco key ls
- Fix log output when no default credentials are set in the credentials file

## [3.0.1]
- Fix missing carriage return when listing keys with hco key ls

## [3.0.0]
- Add HTTP API Problem Details support [RFC9457] per HCLI spec to help with client-side STDERR differentiation
- Update hco to return problem detail errors rather than success messages containing errorlike messages
- Update to a more sensible default configuration (disabled management port and credentials management app)

## [2.1.0]
- Add multiprocess file locking support for credentials file
- Update tests with additional output logs and cleanup

## [2.0.0]
- Add HTTP Basic Authentication support
- Add HCLI Core API Key Authentication (HCOAK) support
- Add authentication support via credentials file and high iteration count hashing (PBKDF2-SHA256)
- Add HCLI management application (hco) to help manage users and api key credentials
- Add hco management application support as a separate and additional configurable port
- Add thread safety around the credentials file
- Add inceptive log failure attempts capture
- Update config to a more threadsafe singleton
- Update hcli_core documentation to reflect updates

## [1.2.1]
- Update missing proper pyproject package configuration to dismiss build warnings
- Update universal dist flag since Python 2.7 is not supported

## [1.2.0]
- Update to falcon 4.0.1
- Update to gunicorn 23.0.0 in circleci tests
- Fix README and hcli_core documentation typos

## [1.1.2]