@@ -3,7 +3,8 @@ import inspect
 import base64
 
 from hcli_core import logger
-from hcli_core import hcliapp
+from hcli_core.auth.cli import credential
+from hcli_core import hcliserver
 from hcli_core import config
 
 log = logger.Logger("hcli_core")
@@ -12,29 +13,21 @@ log.setLevel(logger.INFO)
 
 def connector(plugin_path=None, config_path=None):
 
-    # Initialize core application
-    log.info("================================================")
-    log.info(f"Core HCLI application:")
-    log.info(f"{plugin_path}")
-    coreapp = hcliapp.HCLIApp("core", plugin_path, config_path)
-    core_server = coreapp.server()
-
-    # Initialize management application if applicable
-    mgmt_port = config.Config.get_management_port(config_path)
-    mgmt_server = None
-    if mgmt_port is not None:
-        root = os.path.dirname(inspect.getfile(lambda: None))
-        mgmt_plugin_path = os.path.join(root, 'auth', 'cli')
-        log.info("================================================")
-        log.info(f"Management HCLI application:")
-        log.info(f"{mgmt_plugin_path}")
-        mgmtapp = hcliapp.HCLIApp("management", mgmt_plugin_path, config_path)
-        mgmt_port = mgmtapp.port()
-        mgmt_server = mgmtapp.server()
+    cm = credential.CredentialManager(config_path)
+    server_manager = hcliserver.LazyServerManager(plugin_path, config_path)
 
     # We select a response server based on port
     def port_router(environ, start_response):
-        server_port = environ.get('SERVER_PORT')
+        server_port = int(environ.get('SERVER_PORT', 0))
+
+        # Get or initialize the appropriate server
+        server_info = server_manager.get_server(server_port)
+        if not server_info:
+            log.warning(f"Request received on unconfigured port: {server_port}")
+            start_response('404 Not Found', [('Content-Type', 'text/plain')])
+            return [b'No server configured for this port']
+
+        server_type, server = server_info
 
         # Get authentication info from WSGI environ
         auth_info = environ.get('HTTP_AUTHORIZATION', '')
@@ -69,12 +62,8 @@ def connector(plugin_path=None, config_path=None):
         log.debug(f"  Path: {environ.get('PATH_INFO', '/')}")
         log.debug(f"  Method: {environ.get('REQUEST_METHOD', 'GET')}")
 
-        # Route to appropriate server
-        if mgmt_server and int(server_port) == mgmt_port:
-            config.ServerContext.set_current_server('management')
-            return mgmt_server(environ, start_response)
-
-        config.ServerContext.set_current_server('core')
-        return core_server(environ, start_response)
+        # Set server context and route request
+        config.ServerContext.set_current_server(server_type)
+        return server(environ, start_response)
 
     return port_router
