@@ -1,2 +1,4 @@
 [config]
 core.auth = False
+mgmt.port = 9000
+mgmt.credentials = local
