@@ -11,7 +11,7 @@ class CLI:
 
     def execute(self):
         if self.commands[1] == "--version":
-            return io.BytesIO(b"1.0.1\n")
+            return io.BytesIO(b"1.0.2")
 
         if self.commands[1] == "go":
             return self.pretty(self.inputstream)
@@ -22,7 +22,7 @@ class CLI:
         if self.inputstream != None:
             try:
                 string = json.loads(self.inputstream.read().decode("utf-8"))
-                j = json.dumps(string, indent=4) + "\n"
+                j = json.dumps(string, indent=4)
                 return io.BytesIO(j.encode("utf-8"))
             except:
                 return None
