@@ -1,4 +1,4 @@
 __version__ = "3.1.0"
 dependencies = ["falcon==4.0.1",
                 "portalocker==2.10.1",
-                "huckle==5.1.2"]
+                "huckle==5.2.1"]
